[workspace]
members = ["krypton-cli", "krypton-lang", "krypton-lsp"]
resolver = "2"

[workspace.package]
authors = ["Kyren <ulmliad223@gmail.com> <Kyren223 on Discord>"]
repository = "https://github.com/Kyren223/Krypton"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.71.0"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic / Nursery
cast_lossless = "allow"
cognitive_complexity = "allow"
use_self = "allow"
too_many_lines = "allow"

# Restrictions
as_underscore = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
default_union_representation = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
filetype_is_file = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
missing_assert_message = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
rc_mutex = "warn"
same_name_method = "warn"
str_to_string = "warn"
string_to_string = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
