[package]
name = "krypton-cli"
version = "0.1.0"
description = "A CLI for the Krypton programming language."
authors = ["Kyren <ulmliad223@gmail.com> <Kyren223 on Discord>"]

repository = "https://github.com/Kyren223/Krypton"
readme = "../README.md"
license = "MIT"
license-file = "../LICENSE"

edition = "2021"
rust-version = "1.71.0"

[dependencies]
krypton-lang = { path = "../krypton-lang", features = ["vm", "compiler"] }
clap = "4.5.4"
