[package]
name = "krypton-cli"
version = "0.1.0"
description = "A CLI for the Krypton programming language."
keywords = ["cli", "krypton", "compiler", "vm", "command-line"]
categories = ["command-line-utilities", "command-line-interface"]

repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
krypton-lang = { path = "../krypton-lang", features = ["vm", "compiler"] }
clap = { version = "4.5.4", features = ["default", "cargo"] }
