[package]
name = "krypton-lang"
version = "0.1.0"
description = "The Krypton programming language, including a compiler and a VM."
authors = ["Kyren <ulmliad223@gmail.com> <Kyren223 on Discord>"]

repository = "https://github.com/Kyren223/Krypton"
readme = "../README.md"
license = "MIT"
license-file = "../LICENSE"

edition = "2021"
rust-version = "1.71.0"

[dependencies]
