[package]
name = "krypton-lang"
version = "0.1.0"
description = "The Krypton programming language, including a compiler and a VM."
keywords = ["language", "compiler", "vm", "krypton"]
categories = ["compilers", "virtualization", "parser-implementations"]

repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["compiler", "vm"]
compiler = []
vm = []

[dependencies]
unescaper = "0.1.4"
